# local-ai-packaged

./: .cursorrules  .env.example  .env.global  .env_sample  .gitignore  .gitmodules  .infisical.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  AGENTS.md  Caddyfile  OPENWEBUI_TROUBLESHOOTING.md  README.md  check_supabase_analytics.sh  controlnet.json  diagnose_openwebui.sh  docker-compose.override.private.yml  fix-infisical-init.sh  fix_ownership.sh  monitor_openwebui.sh  monitor_supabase_analytics.sh  pyproject.toml  start_infisical.py  start_services.py  test_openwebui_endpoints.sh  watch_openwebui_logs.sh
03-apps/discord-bot/: Dockerfile  README.md  pyproject.toml
03-apps/discord-bot/bot/: __init__.py  api_client.py  config.py  database.py  immich_client.py  main.py  utils.py
03-apps/discord-bot/bot/agents/: __init__.py  base.py  bluesky_agent.py  character_engagement_agent.py  discord_comm.py  manager.py  supabase_event_agent.py  tumblr_agent.py
03-apps/discord-bot/bot/capabilities/: __init__.py  base.py  character.py  character_commands.py  character_mention.py  echo.py  registry.py  selfie_generation.py  upload.py
03-apps/discord-bot/bot/handlers/: __init__.py  command_handler.py  notification_task.py  upload_handler.py
03-apps/discord-bot/bot/mcp/: __init__.py  models.py  server.py
03-apps/discord-bot/config/: env.example
03-apps/discord-bot/discord_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
03-apps/discord-bot/docs/: FEATURE_GAP_ANALYSIS.md  IMMICH_API.md  IMPLEMENTATION_SUMMARY.md
03-apps/discord-bot/docs/capabilities/: selfie_generation.md
03-apps/discord-bot/scripts/: __init__.py  validate.py
03-apps/discord-bot/tests/: __init__.py  conftest.py
03-apps/discord-bot/tests/integration/: __init__.py  test_claim_face_capability_flow.py  test_claim_face_flow.py  test_notification_flow.py  test_upload_capability_flow.py  test_upload_flow.py
03-apps/discord-bot/tests/manual/: __init__.py  test_discord_connection.py  test_immich_connection.py  test_mcp_tools.py
03-apps/discord-bot/tests/unit/: __init__.py  test_claim_face_capability.py  test_command_handler.py  test_database.py  test_immich_client.py  test_notification_task.py  test_upload_capability.py  test_upload_handler.py  test_utils.py
03-apps/discord-character-bot/: Dockerfile  README.md  pyproject.toml
03-apps/discord-character-bot/bot/: __init__.py  api_client.py  config.py  main.py
03-apps/discord-character-bot/bot/handlers/: __init__.py  command_handler.py  engagement_task.py  message_handler.py
04-lambda/: .env.example  .gitignore  =5.0.0  AGENTS.md  ARCHITECTURE_SUMMARY.md  Dockerfile  LAYER_CONTRACTS.md  README.md  REORGANIZATION_GUIDE.md  crawl_website.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run_all_tests_and_samples.py  validate_routes.py  validate_syntax.py
04-lambda/app/capabilities/calendar/: calendar_workflow.py  router.py
04-lambda/app/capabilities/persona/: __init__.py  persona_workflow.py  router.py
04-lambda/app/capabilities/processing/: __init__.py  processing_workflow.py  router.py
04-lambda/app/capabilities/retrieval/: retrieval_workflow.py  router.py
04-lambda/app/core/: __init__.py  api_models.py  capabilities.py  config.py  constants.py  context_helpers.py  dependencies.py  dependency_factory.py  error_handling.py  exceptions.py  llm.py  models.py  protocols.py  security.py  services.py  wrappers.py
04-lambda/app/core/stores/: __init__.py  base.py
04-lambda/config/: settings.yaml.example
04-lambda/docs/: API_CLOUDFLARE_SETUP.md  API_STRATEGY.md  CODE_IMPROVEMENTS_PHASE2.md  INFISICAL_SETUP.md  RAG_FUNCTIONALITY.md  RAG_MCP_ARCHITECTURE_DECISION.md  _TEMP_MIGRATION_SUMMARY.md
04-lambda/infra/: Dockerfile  docker-compose.yml
04-lambda/server/: config.py  crawl_website.py  main.py
04-lambda/server/api/: auth.py  blob_storage.py  calendar.py  calendar_sync.py  conversation.py  crawl4ai_rag.py  data_view.py  discord_characters.py  graphiti_rag.py  health.py  knowledge.py  mcp_rest.py  mongo_rag.py  n8n_workflow.py  openwebui_export.py  openwebui_topics.py  persona.py  searxng.py
04-lambda/server/core/: api_utils.py  error_handling.py  exceptions.py  logging.py
04-lambda/server/mcp/: AGENTS.md  codegen.py  fastmcp_server.py
04-lambda/server/projects/: ARCHITECTURE_AUDIT.md  OUTSTANDING_WORK.md  verify_compliance.py
04-lambda/src/mcp_server/: router.py  server.py
04-lambda/src/server/: admin.py  config.py  data_view.py  dependencies.py  health.py  images.py  main.py  stack_health.py
04-lambda/tests/: __init__.py  conftest.py
04-lambda/tests/test_auth/: __init__.py  test_api_endpoints.py  test_auth_service.py  test_data_isolation.py  test_dependencies.py  test_jwt_service.py  test_minio_service.py  test_neo4j_service.py  test_supabase_service.py
04-lambda/tests/test_calendar/: __init__.py  test_tools.py
04-lambda/tests/test_conversation/: __init__.py  test_agent.py
04-lambda/tests/test_crawl4ai_rag/: __init__.py  test_api_validation.py  test_deep_crawl.py  test_ingestion.py  test_single_page_crawl.py
04-lambda/tests/test_deep_research/: conftest.py  test_graph_enhanced.py  test_linear_agent.py  test_orchestrator_nodes.py  test_state_models.py  test_storm_workflow.py  test_tools.py
04-lambda/tests/test_graphiti_rag/: __init__.py  test_knowledge_graph_query.py  test_repository_parsing.py  test_script_validation.py  test_search.py
04-lambda/tests/test_mongo_rag/: __init__.py  test_agent.py  test_agent_endpoint.py  test_code_examples.py  test_enhanced_rag.py  test_ingestion.py  test_memory.py  test_mongodb_provisioning.py  test_rls.py  test_search.py  test_search_rls.py
04-lambda/tests/test_n8n_workflow/: __init__.py  test_tools.py
04-lambda/tests/test_openwebui/: __init__.py  test_tools.py
04-lambda/tests/test_persona/: __init__.py  test_tools.py
04-lambda/tests/test_samples/: __init__.py  conftest.py  test_sample_execution.py  test_sample_imports.py
04-lambda/tests/test_searxng/: __init__.py  test_search.py
04-lambda/tests/test_server/: test_server_startup.py
(+1371 files in other folders)
