[project]
name = "local-ai-packaged"
version = "0.1.0"
description = "Local AI packaged services with Supabase, n8n, Flowise, and more"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]


# This is not an installable package - just for dependency management
[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "node_modules",
    "uv.lock",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "PD",  # pandas-vet
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SLF", # flake8-self
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements (complexity - acceptable for some functions)
    "TRY003", # Avoid specifying long messages outside exception class
    "PLR2004", # Magic values in comparisons (HTTP status codes, timeouts are acceptable)
    "PLC0415", # Imports not at top-level (many are intentional in tests/conditional imports)
    "TRY300", # Return statements in try blocks (acceptable pattern in many cases)
    "B008",  # Function call in default argument (FastAPI Depends() pattern)
    "PTH110", # os.path.exists (acceptable for compatibility)
    "PTH118", # os.path.join (acceptable for compatibility)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[tool.black]
line-length = 100
target-version = ["py310"]
