[project]
name = "lambda-server"
version = "1.0.0"
description = "FastAPI multi-project server with MCP support"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic-ai>=0.1.0",
    "pymongo>=4.10.0",
    "openai>=1.58.0",
    "docling>=2.14.0",
    "docling-core>=2.4.0",
    "transformers>=4.47.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "crawl4ai>=0.6.2",
    "playwright>=1.40.0",
    "sentence-transformers>=4.1.0",
    "fastmcp>=2.0.0,<3.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "asyncpg>=0.29.0",
    "boto3>=1.34.0",
    "neo4j>=5.0.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
graphiti = [
    "graphiti-core>=0.30.0rc5",
    "neo4j>=5.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []

