[project]
name = "discord-bot"
version = "1.0.0"
description = "Discord bot for Immich integration"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.1",
    "fastmcp>=2.0.0,<3.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "atproto>=0.0.50",
    "pytumblr>=0.1.0",
    "asyncpg>=0.29.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "manual: Manual testing utilities",
]
